# Software

.circleci/images/duckietown-xenial-kinetic/: Dockerfile
Makefiles/: Makefile.docker.mk
catkin_ws/src/00-infrastructure/duckietown/launch/: keyboard.launch
catkin_ws/src/00-infrastructure/easy_logs/include/easy_logs/cli/: gallery.py
catkin_ws/src/05-teleop/keyboard_mapper/: CMakeLists.txt  package.xml
catkin_ws/src/05-teleop/keyboard_mapper/launch/: keyboard_mapper_node.launch
catkin_ws/src/05-teleop/keyboard_mapper/src/: keyboard_mapper_node.easy_node.yaml  keyboard_mapper_node.py
catkin_ws/src/10-lane-control/ground_projection/scripts/: test_projection_auto.py
catkin_ws/src/10-lane-control/ground_projection/src/: ground_projection_node.py
catkin_ws/src/20-indefinite-navigation/unicorn_intersection/src/: unicorn_intersection_node.py
catkin_ws/src/30-localization-and-planning/visual_odom/src/: visual_odometry.py  visual_odometry_node.py
catkin_ws/src/70-convenience-packages/duckietown_demos/launch/: visualOdometryDemoDriving.launch
