<?xml version="1.0"?>
<package>
  <name>keyboard_mapper</name>
  <version>1.0.0</version>
  <description>The keyboard_mapper package for duckietown. Takes keyboard and convert it to duckietown_msgs.CarControl.</description>

  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>



</package>
